crates/printer/src/schema_type_printer/tests/snapshots/nitrogql_printer__schema_type_printer__tests__one_of_input_object.snap
---
source: crates/printer/src/schema_type_printer/tests/mod.rs
expression: printed
---
export type __nitrogql_schema = {
  query: Query;
};

type __Beautify<Obj> = { [K in keyof Obj]: Obj[K] } & {};
export type __SelectionSet<Orig, Obj, Others> =
  __Beautify<Pick<{
    [K in keyof Orig]: Obj extends { [P in K]?: infer V } ? V : unknown
  }, Extract<keyof Orig, keyof Obj>> & Others>;

export declare namespace __OperationInput {
  export type ID = string | number;

  export type String = string;

  export type Int = number;


  export type UserBy = {
    readonly id: ID;
    readonly email?: never;
    readonly registrationNumber?: never;
  } | {
    readonly id?: never;
    /**
     * Email address of user.
     */
    readonly email: String;
    readonly registrationNumber?: never;
  } | {
    readonly id?: never;
    readonly email?: never;
    /**
     * @deprecated Use id instead
     */
    readonly registrationNumber: Int;
  };

}

export declare namespace __OperationOutput {
  export type ID = string;

  export type String = string;

  export type Int = number;

  export type Query = {
    __typename: "Query";
    me: String;
  };


}

export declare namespace __ResolverInput {
  export type ID = string;

  export type String = string;

  export type Int = number;


  export type UserBy = {
    readonly id: ID;
    readonly email?: never;
    readonly registrationNumber?: never;
  } | {
    readonly id?: never;
    /**
     * Email address of user.
     */
    readonly email: String;
    readonly registrationNumber?: never;
  } | {
    readonly id?: never;
    readonly email?: never;
    /**
     * @deprecated Use id instead
     */
    readonly registrationNumber: Int;
  };

}

export declare namespace __ResolverOutput {
  export type ID = string | number;

  export type String = string;

  export type Int = number;

  export type Query = {
    __typename: "Query";
    me: String;
  };


}

export type ID = __OperationOutput.ID;

export type String = __OperationOutput.String;

export type Int = __OperationOutput.Int;

export type Query = __OperationOutput.Query;

export type UserBy = __ResolverInput.UserBy;
